--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
 
     <TextView
-        android:id="@+id/tvFirstFragment"
+        android:id="@+id/tvThirdFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Completed Inspections"
+        android:text="Profile Page"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
