--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
 <item
-    android:id="@+id/miHome"
+    android:id="@+id/miItem1"
     android:title="Home"
     android:icon="@drawable/ic_home" />
 <item
-    android:id="@+id/miMessages"
+    android:id="@+id/miItem2"
     android:title="Messages"
     android:icon="@drawable/ic_message"  />
 <item
-    android:id="@+id/miProfile"
+    android:id="@+id/miItem3"
     android:title="Profile"
     android:icon="@drawable/ic_person" />
+
+
 </menu>
