--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,14 @@ limitations under the License. -->
     <dimen name="layout_margin">16dp</dimen>
     <dimen name="padding">16dp</dimen>
     <dimen name="line_spacing_multiplier">1.2</dimen>
+    <dimen name="vertical_margin">16dp</dimen>
+    <dimen name="horizontal_margin">8dp</dimen>
+    <dimen name="button_padding">16dp</dimen>
+    <dimen name="button_text_size">18sp</dimen>
+    <dimen name="question_horizontal_margin">32dp</dimen>
+    <dimen name="question_vertical_margin">8dp</dimen>
+    <dimen name="answer_text_size">18sp</dimen>
+    <dimen name="question_text_size">30sp</dimen>
+    <dimen name="image_header_height">192dp</dimen>
+    <dimen name="game_over_height">350dp</dimen>
 </resources>
