data binding added

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_graph" />
 
     <item android:id="@+id/settingsFragment"
-        android:title="Your Runs"
+        android:title="Settings"
         android:icon="@drawable/ic_settings" />
 
 </menu>
