--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
 
     <View
         style="@style/Divider"
+        android:id="@+id/dimage"
         android:layout_width="200dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,17 +32,17 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_margin="10dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/my_border"
         android:gravity="center_vertical"
-
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage"
-        app:layout_constraintVertical_bias="0.482">
+        app:layout_constraintTop_toBottomOf="@+id/dimage"
+        app:layout_constraintVertical_bias="0.27">
 
         <LinearLayout
+            android:id="@+id/lName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -68,15 +69,18 @@
         <View
             style="@style/Divider"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lName" />
 
         <LinearLayout
+            android:id="@+id/lEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-
             android:paddingLeft="@dimen/dimen_16sp">
 
             <TextView
@@ -96,6 +100,7 @@
 
         </LinearLayout>
 
+
         <View
             style="@style/Divider"
             android:layout_width="match_parent"
@@ -103,14 +108,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />
+            app:layout_constraintTop_toBottomOf="@+id/lEmail"
+            />
 
         <LinearLayout
+            android:id="@+id/lPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-
             android:paddingLeft="@dimen/dimen_16sp">
 
             <TextView
@@ -137,7 +143,35 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />
+            app:layout_constraintTop_toBottomOf="@+id/lPhone" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+
+            android:paddingLeft="@dimen/dimen_16sp">
+
+            <ImageView
+                android:id="@+id/ivLogout"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_logout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="  Logout"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
